--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "framer-motion": "^5.5.5",
     "jsonwebtoken": "^8.5.1",
+    "loadash": "^1.0.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-paginate": "^8.1.3"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.6",
