--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-paginate": "^8.1.3"
+    "react-paginate": "^8.1.3",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.5.6",
